uubloomington/uubloomington/static/css/uubloomington.css
@font-face {
  font-family: 'League Spartan Variable';
  src: url('/static/fonts/LeagueSpartanVariable.woff2') format('woff2-variations');
  font-weight: 200 900;
}
* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
    --page-width: 85rem;
    --standard-gap: 1.5rem;
    --standard-radius: 2rem;
    --hover-transition-time: 180ms;
}

body {
    background: #ffffff;
    align-content: center;
    min-height: 100vh;
    min-height: 100dvh;
    display: grid;
    grid-template-rows:
        auto /*Wagtail User Bar*/
        auto /*Header*/
        auto /*Navbar*/
        1fr /*Content*/
        auto; /*Footer*/
    font-family: "League Spartan Variable";
    font-variation-settings: "wght" 375;
    font-size: 1.2rem;
    line-height: 1.5rem;
}

img {
    border-radius: var(--standard-radius);
}

h1,
h2,
h3,
h4,
h5,
h6,
.site-title > * {
    line-height: initial;
}

h1 {
    font-family: "League Spartan Variable";
    font-variation-settings: "wght" 450;
    text-align: center;
    margin-bottom: var(--standard-gap);
}

h2 {
    font-family: "League Spartan Variable";
    font-variation-settings: "wght" 450;
    margin-bottom: 1rem;
}

h3 {
    font-variation-settings: "wght" 450;
}

h4 {
    font-variation-settings: "wght" 450;
}

h5 {
    font-variation-settings: "wght" 450;
}

h6 {
    font-variation-settings: "wght" 450;
}

article > h2 {
    margin: auto;
}

article li {
    margin-bottom: 0.25rem;
}

a {
    tab-index: 0;
}

/*Support Wagtail Rich Text image classes*/
.left,
.right {
    max-width: 45%;
    height: auto;
    clear: both;
}

.left {
    float: left;
    margin: 0 0.75rem 0.75rem 0;
}

.right {
    float: right;
    margin: 0 0 0.75rem 0.75rem;
}

.full-width {
    max-width: 100%;
    align-self: center;
    margin: auto;
    display: block;
}
/*End Wagtail Rich Text image classes*/

/*Support custom text-align Rich Text blocks*/
p.centered {
    text-align: center;
}

p.right-aligned {
    text-align: right;
}
/*End custom text-align blocks*/

#content {
    max-width: var(--page-width);
    width: 100%;
    margin: auto;
    height: 100%;
    display: grid;
    grid-template-columns: 30ch auto;
    background: white;
}

.site-logo > svg {
    fill: #006b1b;
    height: 100px;
}

header {
    background: white;
    padding: 20px calc(calc(100% - var(--page-width)) / 2);
    display: flex;
}

.header-left {
    display: flex;
    margin-left: 1rem;
}

.header-right {
    margin-right: 1rem;
    margin-left: auto;
    font-family: "League Spartan Variable";
    display: flex;
    flex-direction: column;
    font-variation-settings: "wght" 345;
    text-align: right;
}

.announcement {
    font-size: 1.8rem;
    margin-top: auto;
    margin-bottom: auto;
    color: #505050;
    white-space: nowrap;
}

.site-title {
    align-self: center;
    margin-left: 1rem;
    font-family: "League Spartan Variable";
    font-variation-settings: "wght" 345;
    display: flex;
    flex-direction: column;
    gap: 0.3rem;
}

.site-title > :nth-child(1) {
    font-size: 2.5rem;
    margin-bottom: -0.5rem;
}
.site-title > span:nth-child(2) {
    font-size: 1.9rem;
    margin-bottom: 0.5rem;
}
.site-title > span:nth-child(3) {
    font-size: 1.2rem;
}

nav > .nav {
    display: flex;
    /*padding: 0 calc(calc(100% - var(--page-width)) / 2);*/
    padding: 0;
    align-items: start;
    max-width: calc(var(--page-width) - 2rem);
    margin: auto;
    background: white;
    border-bottom: 3px solid #006b1b;
    text-decoration: none;
    color: white;
    font-family: "League Spartan Variable";
    font-variation-settings: "wght" 350;
    font-size: 1.5rem;
}

nav > .nav li {
    list-style: none;
    width: auto;
    height: 100%;
    position: relative;
    background: unset;
    transition: background var(--hover-transition-time);
    white-space: nowrap;
    color: black;
    padding: 0;
}

.nav li a {
    color: black;
    transition: color var(--hover-transition-time);
    padding: 0.75rem 1.5rem;
}

.nav li:hover a,
.nav li.ancestor a,
.nav li.active a,
.nav li.expand a {
    color: white;
    transition: color var(--hover-transition-time);
}

nav > .nav > li > ul {
    display: none;
}

nav > .nav > li.expand > ul {
    display: unset;
    position: absolute;
    /*background: #005000;*/
    background: #006b1b;
    z-index: 1000;
}

nav > .nav li:hover {
    background: #006b1b;
    transition: background var(--hover-transition-time);
    color: white;
}

nav > .nav li.ancestor,
nav > .nav li.active,
nav > .nav li.expand {
    background: #006b1b;
}

.nav li > ul > li {
    background: unset;
    transition: background var(--hover-transition-time);
}

.nav li > ul > li:hover {
    background: #005000;
    transition: background var(--hover-transition-time);
}

nav > .nav a {
    text-decoration: none;
    display: block;
    width: 100%;
    height: 100%;
}

nav > .nav .menu-toggle {
    display: none;
}

article {
    max-width: var(--page-width);
    display: block;
    padding: 1rem;
    container-type: inline-size;
    /*margin: auto;*/
}

article.list-page {
    display: flex;
    flex-direction: column;
    gap: var(--standard-gap)
}

article > p {
    margin-bottom: var(--standard-gap);
}

article > ul {
    list-style-position: outside;
    padding-left: 1rem;
}

.post {
    padding: 0.75rem;
    display: flex;
    flex-direction: column;
    gap: var(--standard-gap);
}

.post.less > * {
    display: none;
}

.post.less > p:nth-of-type(1),
.post.less > h3.post-title,
.post.less > .showmore {
    display: unset;
}

hr {
    width: 75%;
    margin: 1rem auto 1rem auto;
    border: 2px solid #006b1b;
}
/* ... */

